added google cloud storage support
