# src/routes/index.route.js
@@ -1,11 +1,19 @@
 import express from 'express';
 import indexController from '../controllers/index.controller';
-import { Multer } from '../middlewares/upload.middleware.js';
+import {
+  multerUpload,
+  multerGCSUpload,
+} from '../middlewares/upload.middleware.js';
 import authentication from '../middlewares/authenticate.middleware';
 import catchAsync from '../middlewares/catchAsync.middleware';
 
-const { apiEntryPoint, testUploadSingleFile, testUploadFiles } =
-  indexController;
+const {
+  apiEntryPoint,
+  testUploadSingleFile,
+  testUploadMultipleFiles,
+  testUploadSingleFileToGCS,
+  testUploadMultipleFilesToGCS,
+} = indexController;
 
 const { authenticate } = authentication;
 
@@ -14,15 +22,31 @@ const router = express.Router();
 router.get('/', apiEntryPoint);
 router.post(
   '/test-upload-file',
-  Multer.single('file'),
+  multerUpload.single('file'),
   authenticate,
   catchAsync(testUploadSingleFile),
 );
 router.post(
   '/test-upload-files',
-  Multer.array('files', 2),
+  multerUpload.array('files', 2),
   authenticate,
-  catchAsync(testUploadFiles),
+  catchAsync(testUploadMultipleFiles),
+);
+
+/**
+ * Upload a file using the MulterGoogleCloudStorage middleware.
+ */
+router.post(
+  '/test-upload-single-file-to-gcs',
+  multerGCSUpload.single('file'),
+  authenticate,
+  catchAsync(testUploadSingleFileToGCS),
+);
+router.post(
+  '/test-upload-multiple-files-to-gcs',
+  multerGCSUpload.any(),
+  authenticate,
+  catchAsync(testUploadMultipleFilesToGCS),
 );
 
 /**
